welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:8: error: not found: value n
  return n/A
         ^