welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var A:Int=0
  
  
  for (n<-0 to nums.length-1){
    A=nums(n)+A
  }
  return n/A
}